<resources>
    <string name="app_name">UCV</string>

    <!-- Toolbar -->
    <string name="nome_toolbar">UCV</string>
    <string name="nome_toolbar2">Católica de Vitória</string>
    <string name="nome_toolbar_about">Sobre</string>
    <string name="copy_right">Copyright © 2018. Todos os direitos reservados.</string>

    <!-- Drawer Items -->
    <string name="drawer_item_inicio">Visão Geral</string>
    <string name="drawer_item_notas">Notas de provas</string>
    <string name="drawer_item_faltas">Frequência</string>
    <string name="drawer_item_datas_prova">Comunicado</string>
    <string name="drawer_item_financeiro">Financeiro</string>
    <string name="drawer_item_quadro_horario">Quadro de horários</string>
    <string name="drawer_item_historico_escolar">Histórico Escolar</string>
    <string name="drawer_item_documentos">Documentos/Editais</string>
    <string name="drawer_item_indicadores">Indicadores/Desempenho</string>
    <string name="drawer_item_estagios">Estágios/Empregos</string>

    <string name="drawer_item_sessao_outros">Outros</string>
    <string name="drawer_item_configuracoes">Configurações</string>
    <string name="drawer_item_ajuda">Fale Conosco</string>
    <string name="drawer_item_contexto">Alterar Contexto</string>
    <string name="drawer_item_sair">Sair</string>
    <!-- - -->

    <string name="action_settings">Configurações</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_next">Proxima Página</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_back">Página Anterior</string>
    <string name="menu_favorite">Meus Favoritos</string>
    <string name="menu_search">Procurar</string>
    <string name="menu_toolbar">Menu</string>
    <string name="menu_notificacao">Notificações</string>
    <string name="refresh">Atualizar</string>
    <string name="menu_moreapp">Mais App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="menu_about">Sobre</string>
    <string name="matricula">Matrícula ou Email</string>
    <string name="senha">Senha</string>
    <string name="valorMAXP1">/30</string>
    <string name="valorMAXTESTE">/10</string>
    <string name="valorMAXTD1">/5</string>
    <string name="valorMAXTD2">/5</string>
    <string name="valorMAXP2">/30</string>
    <string name="valorMAXTD3">/5</string>
    <string name="valorMAXTD4">/5</string>
    <string name="valorMAXACO">/4</string>
    <string name="valorMAXSOMA1">/50</string>
    <string name="valorMAXSOMA2">/50</string>
    <string name="valorMAXSOMATOTAL">/100</string>

    <string-array name="contexto">
        <item>2015/1</item>
        <item>2015/2</item>
        <item>2016/1</item>
        <item>2016/2</item>
        <item>2017/1</item>
        <item>2017/2</item>
        <item>2018/1</item>
    </string-array>

    <!-- Tutorial Screen -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">PROXIMO</string>
    <string name="skip">PULAR</string>
    <string name="start">INICIAR</string>

    <string name="slide_1_title">Notas</string>
    <string name="slide_1_desc">Visualização de notas de todos os cursos de graduação.</string>

    <string name="slide_2_title">Financeiro</string>
    <string name="slide_2_desc">Resumo da sua situação financeira junto à Universidade para seu acompanhamento mensal.</string>

    <string name="slide_3_title">Frequência</string>
    <string name="slide_3_desc">Verifique suas faltas.</string>

    <string name="slide_4_title">Horários</string>
    <string name="slide_4_desc">Esqueceu o horário ou sala daquela aula?</string>


</resources>
